--- a/includes/css/wcj-admin.css
+++ b/includes/css/wcj-admin.css
@@ -5,12 +5,6 @@
  * @since   2.5.3
  */
 
-img.wcj-rocket-icon {
-	opacity: 0.5;
-	filter: alpha(opacity=50); /* For IE8 and earlier */
-}
-
 img.wcj-rocket-icon:hover {
-	opacity: 1.0;
-	filter: alpha(opacity=100); /* For IE8 and earlier */
+	box-shadow: 0 1px 0 #C43F15;
 }
