--- a/includes/css/wcj-offer-price.css
+++ b/includes/css/wcj-offer-price.css
@@ -48,15 +48,15 @@
 }
 
 /* The Close Button */
-.close {
+.wcj-offer-price-form-close {
 	color: white;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.wcj-offer-price-form-close:hover,
+.wcj-offer-price-form-close:focus {
 	color: #000;
 	text-decoration: none;
 	cursor: pointer;
