--- a/includes/css/wcj-admin.css
+++ b/includes/css/wcj-admin.css
@@ -361,3 +361,39 @@ img.wcj-rocket-icon:hover {
 #toplevel_page_wcj-dashboard.wp-has-current-submenu .wp-menu-image img {
 	filter: brightness(0) invert(1); /* White icon */
 }
+
+/* Upgrade Blocks - Start */
+.wcj-upgrade-block {
+	margin-top: 10px;
+	padding: 15px;
+}
+
+.wcj-upgrade-block__intro {
+	margin: 0 0 10px 0;
+	font-size: 14px;
+}
+
+.wcj-upgrade-block__headline {
+	margin: 0 0 10px 0;
+	font-size: 16px;
+	font-weight: 600;
+}
+
+.wcj-upgrade-block__benefits {
+	list-style: disc;
+	margin-left: 20px;
+	margin-bottom: 15px;
+}
+
+.wcj-upgrade-block__benefits li {
+	margin-bottom: 5px;
+}
+
+.wcj-upgrade-block__actions {
+	margin: 0;
+}
+
+.wcj-upgrade-block__actions .button {
+	margin-right: 10px;
+}
+/* Upgrade Blocks - End */
